--- a/po/cs.po
+++ b/po/cs.po
@@ -1,4 +1,4 @@
-# Dutch translations for PACKAGE package.
+# Czech translations for PACKAGE package.
 # Copyright (C) 2012 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2012.
@@ -11,11 +11,11 @@ msgstr ""
 "PO-Revision-Date: 2012-03-05 15:55+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: nl\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #: main.c:11
 #, c-format
@@ -28,6 +28,7 @@ msgid "Orangutan has %d banana.\n"
 msgid_plural "Orangutan has %d bananas.\n"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: main.c:13
 #, c-format
