--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1,4 +1,4 @@
-# Dutch translations for PACKAGE package.
+# English translations for PACKAGE package.
 # Copyright (C) 2012 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2012.
@@ -11,16 +11,16 @@ msgstr ""
 "PO-Revision-Date: 2012-03-05 15:55+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: nl\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: main.c:11
 #, c-format
 msgid "Hello, world!\n"
-msgstr ""
+msgstr "Hello, world!\n"
 
 #: main.c:12
 #, c-format
