--- a/po/nb.po
+++ b/po/nb.po
@@ -1,4 +1,4 @@
-# Dutch translations for PACKAGE package.
+# Norwegian Bokmal translations for PACKAGE package.
 # Copyright (C) 2012 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Automatically generated, 2012.
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2012-03-05 15:55+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: nl\n"
+"Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
