--- a/po/ru.po
+++ b/po/ru.po
@@ -1,6 +1,6 @@
-# Dutch translations for PACKAGE package.
-# Copyright (C) 2012 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Russian translations for Weblate Hello World package.
+# Copyright (C) 2012 THE Weblate Hello World'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the Weblate Hello World package.
 # Automatically generated, 2012.
 #
 msgid ""
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: Weblate Hello World 2012\n"
 "Report-Msgid-Bugs-To: <noreply@example.net>\n"
 "POT-Creation-Date: 2012-03-14 15:54+0100\n"
-"PO-Revision-Date: 2012-03-05 15:55+0100\n"
+"PO-Revision-Date: 2012-03-07 14:28+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: nl\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: main.c:11
 #, c-format
@@ -28,6 +29,7 @@ msgid "Orangutan has %d banana.\n"
 msgid_plural "Orangutan has %d bananas.\n"
 msgstr[0] ""
 msgstr[1] ""
+msgstr[2] ""
 
 #: main.c:13
 #, c-format
